# esp32_bsec2_iaq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
components/Bosch-BME68x-Library-1.3.40408/: CMakeLists.txt
components/Bosch-BSEC2-Library-1.10.2610/: CMakeLists.txt
extra_cmakes/: bsec2_CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/mqtt/: mqtt.cpp  mqtt.h
main/mqtt_control/: mqtt.cpp  mqtt.h
